Improve CLI AsciiTable formatter to support multi-line spans cell value.

--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -55,6 +55,10 @@
       <groupId>com.googlecode.concurrent-trees</groupId>
       <artifactId>concurrent-trees</artifactId>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
