--- a/security/pom.xml
+++ b/security/pom.xml
@@ -39,6 +39,11 @@
     </dependency>
     <dependency>
       <groupId>co.cask.cdap</groupId>
+      <artifactId>proto</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>co.cask.cdap</groupId>
       <artifactId>common-unit-test</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
