--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <artifactId>api</artifactId>
-  <name>Cask CDAP API</name>
+  <name>Cask Data Application Platform (CDAP)</name>
   <packaging>jar</packaging>
 
   <dependencies>
