Added "API" back to the description of the api/pom.xml. Added a custom "doctitle" to the main pom.xml for building the Javadocs that doesn't repeat the word "API".

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <artifactId>api</artifactId>
-  <name>Cask Data Application Platform (CDAP)</name>
+  <name>Cask Data Application Platform (CDAP) API</name>
   <packaging>jar</packaging>
 
   <dependencies>
