ACLService: manages ACLs

--- a/singlenode/pom.xml
+++ b/singlenode/pom.xml
@@ -79,6 +79,11 @@
     </dependency>
     <dependency>
       <groupId>co.cask.cdap</groupId>
+      <artifactId>security-authorization</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>co.cask.cdap</groupId>
       <artifactId>app-fabric</artifactId>
       <version>${project.version}</version>
     </dependency>
