--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
     <module>watchdog-tests</module>
     <module>app-fabric</module>
     <module>security</module>
+    <module>security-service</module>
     <module>gateway</module>
     <module>explore-client</module>
     <module>explore-jdbc</module>
