--- a/pom.xml
+++ b/pom.xml
@@ -1124,7 +1124,7 @@
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-core_2.10</artifactId>
         <version>${spark.version}</version>
-        <scope>provided</scope>
+        <!--<scope>provided</scope>-->
         <exclusions>
           <exclusion>
             <groupId>org.slf4j</groupId>
