--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
     <unboundid.version>2.3.6</unboundid.version>
     <zookeeper.version>3.4.5</zookeeper.version>
     <spark.version>1.0.1</spark.version>
+    <cdap.client.version>1.0-SNAPSHOT</cdap.client.version>
   </properties>
 
   <modules>
@@ -1130,6 +1131,11 @@
             <artifactId>slf4j-log4j12</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>co.cask.cdap</groupId>
+        <artifactId>authentication-client-java</artifactId>
+        <version>${cdap.client.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
