--- a/examples/SparkPageRank/pom.xml
+++ b/examples/SparkPageRank/pom.xml
@@ -30,31 +30,16 @@
     <app.main.class>co.cask.cdap.examples.sparkpagerank.SparkPageRankApp</app.main.class>
   </properties>
 
-
   <dependencies>
-    <dependency> <!-- Spark dependency -->
+    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.10</artifactId>
-      <version>1.0.1</version>
       <scope>provided</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
-      <version>2.2.0</version>
       <scope>provided</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
   </dependencies>
 
