--- a/web-app/server/enterprise/package.json
+++ b/web-app/server/enterprise/package.json
@@ -1,10 +1,9 @@
 {
-	"name": "reactor-ui-enterprise",
-	"version": "0.0.1",
-	"main": "./main.js",
-	"dependencies": {
-          "xml2js": "0.2.7",
-          "q": "*",
-	  "lodash": "*"
-	}
+  "name": "reactor-ui-enterprise",
+  "version": "0.0.1",
+  "main": "./main.js",
+  "dependencies": {
+    "nock": "0.34.0",
+    "optimist": "0.6.1"
+  }
 }
