--- a/web-app/server/local/package.json
+++ b/web-app/server/local/package.json
@@ -1,10 +1,9 @@
 {
-	"name": "reactor-ui-developer",
-	"version": "0.0.2",
-	"main": "./main.js",
-	"dependencies": {
-    "xml2js": "0.2.7",
-    "q": "*",
-    "lodash": "*"
-	}
+  "name": "reactor-ui-developer",
+  "version": "0.0.2",
+  "main": "./main.js",
+  "dependencies": {
+    "nock": "0.34.0",
+    "optimist": "0.6.1"
+  }
 }
