Fixes node module versions in common server

--- a/web-app/server/common/package.json
+++ b/web-app/server/common/package.json
@@ -7,10 +7,10 @@
     "node-int64": "0.3.0",
     "express": "3.2.4",
     "socket.io": "0.9.14",
-    "request": "*",
-    "thrift": "*",
-    "xml2js": "*",
-    "q": "*",
-    "lodash": "*"
+    "request": "2.42.0",
+    "thrift": "0.9.1",
+    "xml2js": "0.4.4",
+    "q": "1.0.1",
+    "lodash": "2.4.1"
   }
 }
