--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
     <module>cli</module>
     <module>singlenode</module>
     <module>distributions</module>
+    <module>archetypes</module>
   </modules>
 
   <dependencyManagement>
