--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
     <module>proto</module>
     <module>client</module>
     <module>cli</module>
-    <module>singlenode</module>
+    <module>standalone</module>
     <module>distributions</module>
   </modules>
 
