--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -47,6 +47,7 @@
     <module>Ticker</module>
     <module>TrafficAnalytics</module>
     <module>WordCount</module>
+    <module>SparkPageRank</module>
   </modules>
 
   <repositories>
@@ -58,6 +59,7 @@
 
   <properties>
     <hadoop.version>2.3.0</hadoop.version>
+    <spark.core.version>1.0.1</spark.core.version>
     <power.pack.version>[2.0.0,)</power.pack.version>
   </properties>
 
@@ -192,6 +194,18 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-io</artifactId>
         <version>1.3.2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-core_2.10</artifactId>
+        <version>${spark.core.version}</version>
+        <scope>provided</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>co.cask.cdap</groupId>
