Fix client dependency on standalone

--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
     <module>cli</module>
     <module>standalone</module>
     <module>distributions</module>
+    <module>client-tests</module>
   </modules>
 
   <dependencyManagement>
