--- a/client-tests/pom.xml
+++ b/client-tests/pom.xml
@@ -26,7 +26,7 @@ the License.
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>client-tests</artifactId>
-  <name>Cask CDAP Java Client Tests</name>
+  <name>CDAP Java Client Tests</name>
 
   <dependencies>
     <dependency>
