--- a/security-service/pom.xml
+++ b/security-service/pom.xml
@@ -26,7 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>security-service</artifactId>
-  <name>Cask CDAP Security Services</name>
+  <name>CDAP Security Services</name>
 
   <dependencies>
     <dependency>
