CYB #9: Spark PageRank Java archetype

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
     <module>cli</module>
     <module>standalone</module>
     <module>distributions</module>
+    <module>archetypes</module>
   </modules>
 
   <dependencyManagement>
