CYB #9: Spark Java Archetype

--- a/archetypes/pom.xml
+++ b/archetypes/pom.xml
@@ -50,6 +50,7 @@
               <configuration>
                 <excludes>
                   <exclude>**/resources/**/*.txt</exclude>
+                  <exclude>**/README.md</exclude>
                 </excludes>
               </configuration>
             </execution>
