--- a/distributions/src/etc/cdap/conf.dist/cdap-site.xml.example
+++ b/distributions/src/etc/cdap/conf.dist/cdap-site.xml.example
@@ -120,13 +120,13 @@
 
   <!-- Substitute the IP of the Router service to which the UI should connect -->
   <property>
-    <name>gateway.server.address</name>
+    <name>router.server.address</name>
     <value>ROUTER-HOST-IP</value>
     <description>Specifies the destination IP where Router service is running</description>
   </property>
 
   <property>
-    <name>gateway.server.port</name>
+    <name>router.server.port</name>
     <value>10000</value>
     <description>Specifies the destination Port where Router service is listening</description>
   </property>
