--- a/archetypes/cdap-spark-java-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/archetypes/cdap-spark-java-archetype/src/main/resources/archetype-resources/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright 2014 Cask Data, Inc.
+  Copyright © 2014 Cask Data, Inc.
 
   Licensed under the Apache License, Version 2.0 (the "License"); you may not
   use this file except in compliance with the License. You may obtain a copy of
@@ -30,7 +30,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <cdap.version>2.5.0-SNAPSHOT</cdap.version>
-    <spark.core.version>1.0.1</spark.core.version>
+    <spark.core.version>1.1.0</spark.core.version>
     <slf4j.version>1.7.5</slf4j.version>
     <guava.version>13.0.1</guava.version>
     <gson.version>2.2.4</gson.version>
