--- a/archetypes/cdap-spark-java-archetype/pom.xml
+++ b/archetypes/cdap-spark-java-archetype/pom.xml
@@ -21,10 +21,10 @@
   <parent>
     <groupId>co.cask.cdap</groupId>
     <artifactId>archetypes</artifactId>
-    <version>2.5.0-SNAPSHOT</version>
+    <version>2.6.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>cdap-spark-java-archetype</artifactId>
   <packaging>jar</packaging>
-  <name>Cask Data Application Platform (CDAP) Spark Java Archetype</name>
+  <name>CDAP Spark Java Archetype</name>
 </project>
