Fix explore client dependency on twill common

--- a/cdap-explore-client/pom.xml
+++ b/cdap-explore-client/pom.xml
@@ -52,6 +52,10 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.twill</groupId>
+      <artifactId>twill-common</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
