removed occurances of reactor in xml,css,html and json files

--- a/cdap-standalone/pom.xml
+++ b/cdap-standalone/pom.xml
@@ -465,7 +465,7 @@
             </executions>
           </plugin>
 
-          <!-- Extra deployment for reactor sdk -->
+          <!-- Extra deployment for cdap sdk -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-deploy-plugin</artifactId>
