--- a/pom.xml
+++ b/pom.xml
@@ -1682,7 +1682,7 @@
                   </goals>
                   <configuration>
                     <target>
-                      <copy file="${project.build.directory}/dist/rpm/cdap-service" tofile="${stage.dir}/etc/rc.d/init.d/${service.name}" />
+                      <copy file="${project.build.directory}/dist/rpm/cdap-service" tofile="${stage.dir}/etc/rc.d/init.d/cdap-${service.name}" />
                     </target>
                   </configuration>
                 </execution>
@@ -1784,7 +1784,7 @@
                   </goals>
                   <configuration>
                     <target>
-                      <copy file="${project.build.directory}/dist/deb/cdap-service" tofile="${stage.dir}-deb/etc/init.d/{service.name}" />
+                      <copy file="${project.build.directory}/dist/deb/cdap-service" tofile="${stage.dir}-deb/etc/init.d/cdap-${service.name}" />
                     </target>
                   </configuration>
                 </execution>
@@ -1842,7 +1842,7 @@
                     <workingDirectory>${project.build.directory}</workingDirectory>
                     <executable>fpm</executable>
                     <commandlineArgs>
-                      --name "${package.name}"
+                      --name "cdap-${package.name}"
                       --vendor "Cask Data, Inc."
                       --maintainer "support@cask.co"
                       --license "Copyright ${package.build.year} Cask Data, Inc. Licensed under the Apache License, Version 2.0."
@@ -1893,7 +1893,7 @@
                     <workingDirectory>${project.build.directory}</workingDirectory>
                     <executable>fpm</executable>
                     <commandlineArgs>
-                      --name "${package.name}"
+                      --name "cdap-${package.name}"
                       --vendor "Cask Data, Inc."
                       --maintainer "support@cask.co"
                       --license "Copyright ${package.build.year} Cask Data, Inc. Licensed under the Apache License, Version 2.0."
