--- a/cdap-examples/SparkMovieRating/pom.xml
+++ b/cdap-examples/SparkMovieRating/pom.xml
@@ -18,16 +18,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>examples</artifactId>
+    <artifactId>cdap-examples</artifactId>
     <groupId>co.cask.cdap</groupId>
     <version>2.5.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>SparkMovieLens</artifactId>
+  <artifactId>SparkMovieRating</artifactId>
 
   <properties>
-    <app.main.class>co.cask.cdap.examples.sparkmovielens.SparkMovieLensApp</app.main.class>
+    <app.main.class>co.cask.cdap.examples.sparkmovierating.SparkMovieRatingApp</app.main.class>
   </properties>
 
   <repositories>
