--- a/cdap-examples/MovieSteer/pom.xml
+++ b/cdap-examples/MovieSteer/pom.xml
@@ -47,17 +47,26 @@
   </pluginRepositories>
 
   <dependencies>
+    <!--test-->
+    <dependency>
+      <groupId>co.cask.cdap</groupId>
+      <artifactId>cdap-data-fabric</artifactId>
+      <version>2.5.0-SNAPSHOT</version>
+    </dependency>
+    <!--breeze-->
     <dependency>
       <groupId>org.scalanlp</groupId>
       <artifactId>breeze_2.10</artifactId>
       <version>0.9</version>
     </dependency>
+    <!--scala-->
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>2.10.3</version>
       <scope>provided</scope>
     </dependency>
+    <!--spark-->
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.10</artifactId>
