--- a/pom.xml
+++ b/pom.xml
@@ -54,15 +54,15 @@
     </repository>
   </repositories>
 
+
   <distributionManagement>
     <repository>
-      <id>nexus</id>
-      <name>continuuity-internal</name>
-      <url>https://repository.continuuity.com/service/local/staging/deploy/maven2</url>
+      <id>sonatype.release</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
     </repository>
     <snapshotRepository>
-      <id>continuuity</id>
-      <url>https://repository.continuuity.com/content/repositories/snapshots/</url>
+      <id>sonatype.snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <site>
       <id>continuuity</id>
@@ -116,6 +116,8 @@
     <zookeeper.version>3.4.5</zookeeper.version>
     <spark.version>1.1.0</spark.version>
     <cdap.client.version>1.0.0-SNAPSHOT</cdap.client.version>
+    <cask.snapshot.repo>https://nexus.cask.co/content/repositories/snapshots</cask.snapshot.repo>
+    <cask.release.repo>https://nexus.cask.co/service/local/staging/deploy/maven2</cask.release.repo>
   </properties>
 
   <modules>
@@ -1631,10 +1633,10 @@
                 <configuration>
                   <source>
                     if (project.version.endsWith("-SNAPSHOT")){
-                      project.properties['deploy.url'] = project.distributionManagement.snapshotRepository.url;
+                      project.properties['deploy.url'] = ${cask.snapshot.repo};
                       project.properties['dist.deploy.groupId'] = "co.cask.cdap.distributions.snapshots";
                     } else {
-                      project.properties['deploy.url'] = project.distributionManagement.repository.url;
+                      project.properties['deploy.url'] = ${cask.release.repo};
                       project.properties['dist.deploy.groupId'] = "co.cask.cdap.distributions.release";
                     }
                   </source>
