--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <name>Cask Data Application Platform (CDAP)</name>
 
   <organization>
-    <name>Cask</name>
+    <name>Cask Data, Inc</name>
     <url>http://cask.co</url>
   </organization>
 
@@ -42,7 +42,7 @@
     <developer>
       <name>Cask Data</name>
       <email>cask-dev@googlegroups.com</email>
-      <organization>Cask Data</organization>
+      <organization>Cask Data, Inc</organization>
       <organizationUrl>https://github.com/caskco/cdap</organizationUrl>
     </developer>
   </developers>
