--- a/cdap-archetypes/pom.xml
+++ b/cdap-archetypes/pom.xml
@@ -32,6 +32,7 @@
   <modules>
     <module>cdap-spark-java-archetype</module>
     <module>cdap-spark-scala-archetype</module>
+    <module>cdap-app-archetype</module>
   </modules>
 
   <build>
