Added feature to ApplicationClient to deploy an application from a class

--- a/cdap-client/pom.xml
+++ b/cdap-client/pom.xml
@@ -107,6 +107,10 @@
       <groupId>co.cask.cdap</groupId>
       <artifactId>cdap-authentication-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.twill</groupId>
+      <artifactId>twill-core</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
