--- a/cdap-cli/pom.xml
+++ b/cdap-cli/pom.xml
@@ -38,6 +38,12 @@
       <groupId>co.cask.cdap</groupId>
       <artifactId>cdap-client</artifactId>
       <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.twill</groupId>
+          <artifactId>twill-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
