Fix CLI * CLI now reads cdap-site.xml in the classpath for hostname/port/ssl configuration * CLI now saves the generated access token to the local filesystem for later use * cdap-cli.bat now passes arguments through to `CLIMain` * cdap-cli.sh now passes arguments through to `CLIMain` and no longer `cd`'s into the CLI jar's directory

--- a/cdap-cli/pom.xml
+++ b/cdap-cli/pom.xml
@@ -40,6 +40,10 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
     </dependency>
@@ -94,7 +98,6 @@
       </plugin>
     </plugins>
   </build>
-
 
   <profiles>
     <profile>
